small benchmark tweak